--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <div id="app"></div>
 
+    <script src="src/init.js"></script>
     <script src="src/index.js"></script>
   </body>
 </html>
