--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
   <head>
     <title>Parcel Sandbox</title>
     <meta charset="UTF-8" />
+    <script type="module" src="src/init.js"></script>
+    <script type="module" src="src/index.js"></script>
   </head>
-
   <body>
     <div id="app"></div>
-
-    <script src="src/init.js"></script>
-    <script src="src/index.js"></script>
   </body>
 </html>
